--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "EaseryDock",
+    "name": "EasyDocker",
     "image": "mcr.microsoft.com/devcontainers/python",
     "runArgs": [
         "--privileged"
